--- a/tmux.conf
+++ b/tmux.conf
@@ -30,19 +30,33 @@ set-window-option -g clock-mode-colour colour64
 set -g status-right-length 65
 set -g status-right "#[fg=colour187][#(itunesartist) - #(itunestrack)] #[fg=default][%H:%M %e-%b-%Y]"
 set -g status-interval 5
- 
+
+# enable mouse interactions
 set-option -g mouse-select-pane on
+set-option -g mouse-resize-pane on
 set-option -g mouse-select-window on
 set-option -g mode-mouse on
- 
+set-option -g mouse-utf8 on
+
 set-window-option -g utf8 on
+
+# move around panes with hjkl, as one would in vim after pressing ctrl-a
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
+
+# resize with hjkl
+bind C-h select-pane -L
+bind C-j select-pane -D
+bind C-k select-pane -U
+bind C-l select-pane -R
  
 set-option -g status-keys vi
 set-option -g mode-keys vi
  
 #no command delay
 set -sg escape-time 0
-
 
 ### KEYS ###
 
