--- a/tmux.conf
+++ b/tmux.conf
@@ -2,29 +2,34 @@
 set -g default-terminal "xterm-256color"
  
 # default statusbar colors
-set-option -g status-bg colour235
-set-option -g status-fg colour179
-set-option -g status-attr default
+set -g status-bg black                                             
+set -g status-fg yellow                                            
+set -g status-attr default  
  
 # default window title colors
-set-window-option -g window-status-fg colour244
-set-window-option -g window-status-bg default
+setw -g window-status-fg brightblue                                
+setw -g window-status-bg default 
  
 # active window title colors
-set-window-option -g window-status-current-fg colour166
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+setw -g window-status-current-fg yellow                            
+setw -g window-status-current-bg default                           
+setw -g window-status-current-attr dim      
  
 # pane border
-set-option -g pane-border-fg colour235
-set-option -g pane-active-border-fg colour240
- 
+set -g pane-border-fg black                                        
+set -g pane-border-bg default                                      
+set -g pane-active-border-fg yellow                                
+
+# command line/message text                                        
+set -g message-bg black                                            
+set -g message-fg yellow     
+
 # pane number display
-set-option -g display-panes-active-colour colour33
-set-option -g display-panes-colour colour166
+set -g display-panes-active-colour yellow                          
+set -g display-panes-colour brightblue              
  
 # clock
-set-window-option -g clock-mode-colour colour64
+setw -g clock-mode-colour yellow            
  
 # status bar right contents
 set -g status-right-length 65
