--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,10 @@
 ### LOOK & FEEL ###
 set -g default-terminal "xterm-256color"
- 
+
+# enable utf-8 on status bar
+set -g status on
+set -g status-utf8 on
+
 # default statusbar colors
 set -g status-bg black                                             
 set -g status-fg yellow                                            
