Edits for tmux 2.1

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,11 +40,7 @@ set -g status-right-length 65
 set -g status-interval 5
 
 # enable mouse interactions
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-window on
-set-option -g mode-mouse on
-set-option -g mouse-utf8 on
+set-option -g mouse on
 
 set-window-option -g utf8 on
 
@@ -63,7 +59,7 @@ bind C-l select-pane -R
 set-option -g status-keys vi
 set-option -g mode-keys vi
 
-#no command delay
+# no command delay
 set -sg escape-time 0
 
 ### KEYS ###
