Added zsh as default shell

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,6 @@ set -g default-terminal "xterm-256color"
 
 # enable utf-8 on status bar
 set -g status on
-set -g status-utf8 on
 
 # default statusbar colors
 set -g status-bg black                                             
@@ -43,8 +42,6 @@ set -g status-interval 5
 # enable mouse interactions
 set-option -g mouse on
 
-set-window-option -g utf8 on
-
 # move around panes with hjkl, as one would in vim after pressing ctrl-a
 bind -r h select-pane -L
 bind -r j select-pane -D
@@ -81,3 +78,5 @@ bind ^A select-pane -t :.+
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# Use ZSH as default shell
+set-option -g default-shell /bin/zsh
