Fixed number increment for vim.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 ### LOOK & FEEL ###
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # enable utf-8 on status bar
 set -g status on
@@ -62,21 +62,20 @@ set -sg escape-time 0
 
 ### KEYS ###
 
-# remap prefix to Control + a
-set -g prefix C-a
-unbind C-b
-bind C-a send-prefix
+## remap prefix to Control + a
+#set -g prefix C-a
+#unbind C-b
+#bind C-a send-prefix
 
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
 
 # quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
+bind ^F select-pane -t :.+
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-# Use ZSH as default shell
-set-option -g default-shell /bin/zsh
+# For vim number increment
+unbind ^A
