--- a/tmux.conf
+++ b/tmux.conf
@@ -1,39 +1,39 @@
 ### LOOK & FEEL ###
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 
 # enable utf-8 on status bar
 set -g status on
 
 # default statusbar colors
-set -g status-bg black                                             
-set -g status-fg yellow                                            
-set -g status-attr default  
-set -g status-interval 0
-
-# default window title colors
-setw -g window-status-fg brightblue                                
-setw -g window-status-bg default 
- 
-# active window title colors
-setw -g window-status-current-fg yellow                            
-setw -g window-status-current-bg default                           
-setw -g window-status-current-attr dim      
+#set -g status-bg black                                             
+#set -g status-fg yellow                                            
+#set -g status-attr default  
+#set -g status-interval 0
+#
+## default window title colors
+#setw -g window-status-fg brightblue                                
+#setw -g window-status-bg default 
+# 
+## active window title colors
+#setw -g window-status-current-fg yellow                            
+#setw -g window-status-current-bg default                           
+#setw -g window-status-current-attr dim      
  
 # pane border
-set -g pane-border-fg black                                        
-set -g pane-border-bg default                                      
-set -g pane-active-border-fg yellow                                
+#set -g pane-border-fg black                                        
+#set -g pane-border-bg default                                      
+#set -g pane-active-border-fg yellow                                
 
 # command line/message text                                        
-set -g message-bg black                                            
-set -g message-fg yellow     
+#set -g message-bg black                                            
+#set -g message-fg yellow     
 
 # pane number display
-set -g display-panes-active-colour yellow                          
-set -g display-panes-colour brightblue              
+#set -g display-panes-active-colour yellow                          
+#set -g display-panes-colour brightblue              
  
 # clock
-setw -g clock-mode-colour yellow            
+#setw -g clock-mode-colour yellow            
  
 # status bar right contents
 set -g status-right-length 65
@@ -63,9 +63,9 @@ set -sg escape-time 0
 ### KEYS ###
 
 ## remap prefix to Control + a
-#set -g prefix C-a
-#unbind C-b
-#bind C-a send-prefix
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
 
 # force a reload of the config file
 unbind r
@@ -78,4 +78,4 @@ bind ^F select-pane -t :.+
 setw -g mode-keys vi
 
 # For vim number increment
-unbind ^A
+#unbind ^A
