--- a/tmux.conf
+++ b/tmux.conf
@@ -79,3 +79,7 @@ setw -g mode-keys vi
 
 # For vim number increment
 #unbind ^A
+
+# For session previews
+bind-key s choose-tree -Zs
+bind-key w choose-tree -Zw
